# nft-dnd-stellar

./: .gitignore  GAME_DESIGN_DOC.md  README.md  build_log.txt  decode_error.js  package-lock.json  package.json
contracts/: Cargo.toml  package.json
contracts/soroban/adventure_vault/: Cargo.toml
contracts/soroban/adventure_vault/src/: contract.rs  hub.rs  lib.rs  session.rs  storage.rs  test.rs
contracts/soroban/adventure_vault/test_snapshots/test/: test_cannot_end_twice.1.json  test_end_adventure_failure.1.json  test_end_adventure_success.1.json  test_init_adventure.1.json  test_loot_rolling_flow.1.json  test_session_count.1.json  test_submit_action.1.json  test_submit_action_wrong_player.1.json
contracts/soroban/dnd_arena_game/: Cargo.toml
contracts/soroban/dnd_arena_game/src/: lib.rs
contracts/soroban/dnd_contract/: Cargo.toml
contracts/soroban/dnd_contract/src/: lib.rs
contracts/soroban/dnd_token/: Cargo.toml
contracts/soroban/dnd_token/src/: admin.rs  allowance.rs  balance.rs  contract.rs  lib.rs  metadata.rs  storage.rs  test.rs
contracts/soroban/dnd_token/test_snapshots/test/: test_approve_and_transfer_from.1.json  test_burn_for_penance.1.json  (+6 more)
contracts/soroban/fate_verifier/: Cargo.toml
contracts/soroban/fate_verifier/src/: contract.rs  groth16.rs  lib.rs  merkle.rs  poseidon.rs  storage.rs  test.rs  types.rs
contracts/soroban/relic_registry/: Cargo.toml
contracts/soroban/relic_registry/src/: contract.rs  lib.rs  marketplace.rs  nft.rs  storage.rs  test.rs
server/risc0/host/: Cargo.toml
server/risc0/host/src/: main.rs
(+103 files in other folders)
