[workspace]
resolver = "2"
members = [
  "soroban/dnd_token",
  "soroban/fate_verifier",
  "soroban/relic_registry",
  "soroban/adventure_vault",
]

[workspace.dependencies]
soroban-sdk = "22"
soroban-token-sdk = "22"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
